core/src/main/web/app/styles/cells.scss
/*
 *  Copyright 2014 TWO SIGMA OPEN SOURCE, LLC
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

@import "cell-menus";
@import "cell-errors";
@import "cell-outputs";

.bkcell {
    margin-bottom:  10px;

    .CodeMirror {
        background: transparent;
    }
}

bk-markdown-cell > div {
    border:      solid 1px $cell-border;
    padding-top: 30px;

    &.focused, &:hover {
        border: solid 1px $highlight-blue;
    }
}

.mini-cell-stats {
    top: 22px;
    left: 20px;
    color: $font-grey;
    position: absolute;
    font-size: 12px;
}
.loading-state {
    color: $font-grey;
    font-size: 11px;
    line-height: 25px;
}

.bkcell.code-cell-area, .text-cell {
    padding: 20px;
    border: solid 1px $cell-border;
}

.bkcell bk-code-cell-input-menu .dropdown {
    float:          left;
    z-index:        99;
    position:       relative;
    padding-bottom: 20px;
}

bk-cell > .bkcell {
    position: relative;
}

bk-section-cell, bk-text-cell {
    padding: 20px;
}

.bkcell bk-code-cell-input-menu .dropdown .dropdown-menu {
    margin-top: -20px;
}

bk-code-cell .code-cell-output {
    margin:     20px -20px -10px;
    padding:    0 20px;
    position:   relative;
    border-top: solid 1px #CCC;

    &.input-hidden {
        margin-top: 35px;
    }
}

.advanced-mode bk-code-cell .code-cell-output {
    margin-top: 20px;

    &.no-output .cell-menu-item {
        display: none;
    }
}

.advanced-mode .output-hidden .cell-menu-item {
    display: none;
}

bk-code-cell .locked .code-cell-output {
    border: none;
    margin-top: 0;
}

bk-output-display .slickgrid {
    padding-top: 10px;
}

bk-output-display pre {
    border:     none;
    margin:     0;
    padding:    0;
    background: transparent;
}

.base-menu-add .insert-cell-indicator {
    padding: 8px 13px;
}

.insert-cell-indicator {
    color:       #FFF;
    cursor:      pointer;
    display:     inline-block;
    padding:     2px 5px 0;
    font-size:   13px;
    background:  $highlight-blue;
    font-weight: bold;
    white-space: nowrap;
}

.code-cell-hidden {
    padding-top: 20px;
}

